--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "express": "^4.16.4"
   },
+    "engines": {
+    "node": "6.11.2"
+  }
   "scripts": {
     "start": "node index.js"
   }
