--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "heroku-simple-app",
+  "name": "hellonode",
   "version": "1.0.0",
-  "description": "simple nodejs app app for heroku",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "sayyid",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.16.4"
   },
-    "engines": {
+  "engines": {
     "node": "6.11.2"
-  },
-  "scripts": {
-    "start": "node index.js"
   }
 }
